2005-01-22  Thomas Koenig  <Thomas.Koenig@online.de>

PR libfortran/19451
	* io/transfer.c (finalize_transfer):  Don't do anything if
	there is an error condition.
	* open_readonly_1.f90:  New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@94101 138bc75d-0d04-0410-961f-82ee72b054a4